// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<Card
  className="login-box p-4"
  tag="div"
>
  <CardBlock
    className="card-body"
    tag="div"
  >
    <span />
    <AvForm
      data-spec="login-form-container"
      method="get"
      model={Object {}}
      onInvalidSubmit={[Function]}
      onKeyDown={[Function]}
      onSubmit={[Function]}
      onValidSubmit={[Function]}
      tag={[Function]}
      validationEvent={
        Array [
          "onChange",
          "onInput",
        ]
      }
    >
      <h1>
        Login
      </h1>
      <p
        className="text-muted"
      >
        Sign in to RPThreadTracker
      </p>
      <span />
      <LoginForm
        handleInputChange={[Function]}
      />
      <Row
        tag="div"
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Button
            className="px-4"
            color="primary"
            tag="button"
          >
            Login
          </Button>
        </Col>
        <Col
          className="text-right text-muted"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Link
            href="/register"
            replace={false}
            to="/register"
          >
            Sign up
          </Link>
           • 
           
          <Link
            href="/forgotpassword"
            replace={false}
            to="/forgotpassword"
          >
            Forgot password?
          </Link>
        </Col>
      </Row>
    </AvForm>
  </CardBlock>
</Card>
`;

exports[`rendering snapshots should render valid snapshot with error message 1`] = `
<Card
  className="login-box p-4"
  tag="div"
>
  <CardBlock
    className="card-body"
    tag="div"
  >
    <span />
    <AvForm
      data-spec="login-form-container"
      method="get"
      model={Object {}}
      onInvalidSubmit={[Function]}
      onKeyDown={[Function]}
      onSubmit={[Function]}
      onValidSubmit={[Function]}
      tag={[Function]}
      validationEvent={
        Array [
          "onChange",
          "onInput",
        ]
      }
    >
      <h1>
        Login
      </h1>
      <p
        className="text-muted"
      >
        Sign in to RPThreadTracker
      </p>
      <div
        className="has-danger"
      >
        <p
          className="form-control-feedback"
          data-spec="login-server-error"
        >
          An unknown error occurred.
        </p>
      </div>
      <LoginForm
        handleInputChange={[Function]}
      />
      <Row
        tag="div"
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Button
            className="px-4"
            color="primary"
            tag="button"
          >
            Login
          </Button>
        </Col>
        <Col
          className="text-right text-muted"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Link
            href="/register"
            replace={false}
            to="/register"
          >
            Sign up
          </Link>
           • 
           
          <Link
            href="/forgotpassword"
            replace={false}
            to="/forgotpassword"
          >
            Forgot password?
          </Link>
        </Col>
      </Row>
    </AvForm>
  </CardBlock>
</Card>
`;

exports[`rendering snapshots should render valid snapshot with loading indicator 1`] = `
<Card
  className="login-box p-4"
  tag="div"
>
  <CardBlock
    className="card-body"
    tag="div"
  >
    <LoadingIndicator
      style={
        Object {
          "height": 50,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": 50,
        }
      }
    />
    <AvForm
      data-spec="login-form-container"
      method="get"
      model={Object {}}
      onInvalidSubmit={[Function]}
      onKeyDown={[Function]}
      onSubmit={[Function]}
      onValidSubmit={[Function]}
      tag={[Function]}
      validationEvent={
        Array [
          "onChange",
          "onInput",
        ]
      }
    >
      <h1>
        Login
      </h1>
      <p
        className="text-muted"
      >
        Sign in to RPThreadTracker
      </p>
      <span />
      <LoginForm
        handleInputChange={[Function]}
      />
      <Row
        tag="div"
      >
        <Col
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Button
            className="px-4"
            color="primary"
            tag="button"
          >
            Login
          </Button>
        </Col>
        <Col
          className="text-right text-muted"
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
          xs="6"
        >
          <Link
            href="/register"
            replace={false}
            to="/register"
          >
            Sign up
          </Link>
           • 
           
          <Link
            href="/forgotpassword"
            replace={false}
            to="/forgotpassword"
          >
            Forgot password?
          </Link>
        </Col>
      </Row>
    </AvForm>
  </CardBlock>
</Card>
`;
